Fix mobile wrapping errors

--- a/sass/default/_mobile.scss
+++ b/sass/default/_mobile.scss
@@ -3,7 +3,7 @@
   width: 100%;
   padding: 1em;
 
-  .wrap-inner {
+  .max-w {
     float: none !important;
     margin: 0 auto !important;
   }
